Fix bug with overflow x on CollapsibleContainer.js Remove borders for CollapsibleContainer.js with label Add exit animation to task components

--- a/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
+++ b/client/src/components/utilities/CollapsibleContainer/CollapsibleContainer.module.scss
@@ -8,8 +8,13 @@
   border-top: $base-border;
   border-bottom: $base-border;
   gap: 0;
+  overflow-x: hidden;
   & > * {
     margin-bottom: 20px;
+  }
+
+  &.noBorder {
+    border: none;
   }
 }
 
